--- a/modules/1237/pages/image2-proceedings.adoc
+++ b/modules/1237/pages/image2-proceedings.adoc
@@ -1,6 +1,9 @@
 = Image 2, Proceedings
 :page-role: wide
 
+In this image, one only sees the report of the proceeding. The text to its right, visible in the
+xref:page2-intor.adoc[complete image] has been removed.
+
 image::002-1-proceedings.png[link=self]
 
 [.lead]
@@ -17,6 +20,8 @@ image::002-1-proceedings.png[link=self]
 |*Location*          | Amt Bückeburg / Berenbusch
 |*Subject*           | Land request by Colon Krückeberg (No. 10)
 |===
+
+== Transliteration and Translation 
 
 [cols="a,a"]
 |===
