--- a/modules/1237/pages/image2-proceedings.adoc
+++ b/modules/1237/pages/image2-proceedings.adoc
@@ -2,7 +2,7 @@
 :page-role: wide
 
 In this image, one only sees the report of the proceeding. The text to its right, visible in the
-xref:page2-intor.adoc[complete image] has been removed.
+xref:page2-intro.adoc[complete image] has been removed.
 
 image::002-1-proceedings.png[link=self]
 
