--- a/modules/1237/pages/image12.adoc
+++ b/modules/1237/pages/image12.adoc
@@ -12,6 +12,30 @@ image::0012.png[link=self]
 |
 [verse]
 ____
+zu übernehmen und jährlich zu gehörne
+Zeit in die Rechnungen des Amts Bücke
+üburg richtig abzutragen; So wird
+dem Colon Jobst Heinrich Krucke
+berg nr: 10, zu Berenbusch und deßen
+Erben das Eigenthum dieser von ihm
+erkauften Platze hiemit übergeben
+und die Versicherung ertheilet, daß
+er und seine Erben bey deren Besitz
+jederzeit und gegen Jedermann
+geschützet werden sollen.
+Deßen zur Urkund ist dieses statt Kaufe-
+briefs unter beÿ gedruckten Gräfl.
+vormundschaftln Cam̅ersiegel und
+gewöhnlicher Unterschrift ausge-
+fertiget worden. So geschehen
+December 1800.
+Bückeburg, d. 1800.
+Grafl: Schaumburg; Lippische zur
+vormundschaftliche Rentcammer
+verordnete Director und Räthe
+Gladbeck v. Landesberg Maas
+Windt
+Wippermann
 ____
 
 |
