--- a/modules/1237/pages/image11.adoc
+++ b/modules/1237/pages/image11.adoc
@@ -1,4 +1,4 @@
-= Image 11
+= Images 11 and 12
 :page-role: wide
 
 image::0011.png[link=self]
@@ -17,6 +17,8 @@ für den Colon Kruckeberg
 Nr: 10 zu Berenbusch über  
 einen Platz zur Vergrößerung  
 seines Gartens.
+
+Expidirt p. Beÿer    
 
                       Nachdem auf Ansuchen des Colons  
                       Jobst Heinrich Krückeberg Nr. 10  
@@ -45,8 +47,30 @@ seines Gartens.
                       bution, auch sowohl gewöhnliche  
                       als außerordentliche Abgaben  
                       zu ...[continues on next image]
-    
-Expidirt p. Beÿer    
+                      zu übernehmen und jährlich zu gehörigen
+                      Zeit in die Rechnungen des Amts Bücke-
+                      üburg richtig abzutragen; So wird
+                      dem Colon Jobst Heinrich Krucke
+                      berg nr: 10, zu Berenbusch und dessen
+                      Erben das Eigenthum dieser von ihm
+                      erkauften Plätze hiemit übergeben
+                      und die Versicherung ertheilet, daß
+                      er und seine Erben beÿ deren Besitz
+                      jederzeit und gegen Jedermann
+                      geschützet werden sollen.
+                      Deßen zur Urkund ist dieses statt Kaufe-
+                      briefs unter beÿgedruckten Gräfl.
+                      vormundschaftln Cam̅ersiegel und
+                      gewöhnlicher Unterschrift ausge-
+                      fertiget worden. So geschehen
+                      Bückeburg, d. December 1800.
+                      
+                      Grafl: Schaumburg; Lippische zur
+                      vormundschaftl. Rentcammer
+                      verordnete Director und Räthe
+                      Gladbeck v. Landesberg Maas
+                      Windt
+                      Wippermann
 ____
 
 |
@@ -58,6 +82,7 @@ No. 10 at Berenbusch,
 concerning a plot of land for the enlargement  
 of his garden.
 
+Issued by Beier       
                       After, upon the petition of the colonist  
                       Jobst Heinrich Krückeberg No. 10  
                       at Berenbusch, jurisdiction of Bückeburg,  
@@ -84,7 +109,7 @@ of his garden.
                       contribution for the aforementioned plots,  
                       as well as both regular and extraordinary taxes and dues to
                       [continues on next page] 
-Issued by Beier       
+
 ____
 |===
 
