--- a/modules/1237/pages/image12.adoc
+++ b/modules/1237/pages/image12.adoc
@@ -12,26 +12,26 @@ image::0012.png[link=self]
 |
 [verse]
 ____
-zu übernehmen und jährlich zu gehörne
-Zeit in die Rechnungen des Amts Bücke
+zu übernehmen und jährlich zu gehörigen
+Zeit in die Rechnungen des Amts Bücke-
 üburg richtig abzutragen; So wird
 dem Colon Jobst Heinrich Krucke
-berg nr: 10, zu Berenbusch und deßen
+berg nr: 10, zu Berenbusch und dessen
 Erben das Eigenthum dieser von ihm
-erkauften Platze hiemit übergeben
+erkauften Plätze hiemit übergeben
 und die Versicherung ertheilet, daß
-er und seine Erben bey deren Besitz
+er und seine Erben beÿ deren Besitz
 jederzeit und gegen Jedermann
 geschützet werden sollen.
 Deßen zur Urkund ist dieses statt Kaufe-
-briefs unter beÿ gedruckten Gräfl.
+briefs unter beÿgedruckten Gräfl.
 vormundschaftln Cam̅ersiegel und
 gewöhnlicher Unterschrift ausge-
 fertiget worden. So geschehen
-December 1800.
-Bückeburg, d. 1800.
+Bückeburg, d. December 1800.
+
 Grafl: Schaumburg; Lippische zur
-vormundschaftliche Rentcammer
+vormundschaftl. Rentcammer
 verordnete Director und Räthe
 Gladbeck v. Landesberg Maas
 Windt
