--- a/modules/1237/pages/image11-12.adoc
+++ b/modules/1237/pages/image11-12.adoc
@@ -1,9 +1,9 @@
 = Images 11 and 12
 :page-role: wide
 
-Images 11 and 12 are one written composition concerning the disposition of Jobst Heinrich Krückeberg's request.
-The Gräflich Schaumburg-Lippische vormundschaftliche Rentcammer (Comital Schaumburg-Lippe
-Guardianship Treasury Office) officially rendered and documented the decision.
+In December, 1800, the Gräflich Schaumburg-Lippische vormundschaftliche Rentcammer (Comital Schaumburg-Lippe
+Guardianship Treasury Office) officially rendered and documented its decision on Jobst Heinrich petition, which 
+appears on images 11 and 12.
 
 Here is image 11, the first part of the decision:
 
