--- a/modules/1237/pages/image11-12.adoc
+++ b/modules/1237/pages/image11-12.adoc
@@ -2,8 +2,8 @@
 :page-role: wide
 
 In December, 1800, the Gräflich Schaumburg-Lippische vormundschaftliche Rentcammer (Comital Schaumburg-Lippe
-Guardianship Treasury Office) officially rendered and documented its decision on Jobst Heinrich petition, which 
-appears on images 11 and 12.
+Guardianship Treasury Office) officially rendered and documented their decision on Jobst Heinrich Krückeberg's
+petition, which appears on images 11 and 12 below.
 
 Here is image 11, the first part of the decision:
 
