--- a/modules/1237/pages/image11-12.adoc
+++ b/modules/1237/pages/image11-12.adoc
@@ -7,11 +7,14 @@ petition, which appears on images 11 and 12 below.
 
 Here is image 11, the first part of the decision:
 
-image::0011.png[link=self]
+image::0011.png[align=left,title='Decision on Jobst Heinrich Krückeberg's Petition, part one (Click to enlarge)',link=self]
 
 Here is image 12, the conclusion of the decision:
 
-image::0012.png[link=self]
+image::0012.png[align=left,title='Decision on Jobst Heinrich Krückeberg's Petition, part two (Click to enlarge)',link=self]
+
+[role="section-narrow"]
+== Transliteration and Translation
 
 [cols="1a,1a"]
 |===
