--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -9,4 +9,4 @@
 * TODO: Complete image three
 ** xref:image3-opposite-pg-main-text.adoc[]
 ** xref:image3-left-bot.adoc[]
-* xref:image11-12.adoc[]
+* xref:image11-12.adoc[Final Decision]
