--- a/modules/1237/pages/image2-proceedings.adoc
+++ b/modules/1237/pages/image2-proceedings.adoc
@@ -1,4 +1,4 @@
-= Image 2, Proceedings
+= June 1798 Proceedings
 :page-role: wide
 
 In this image, one only sees the report of the proceeding. The text to its right, visible in the
