--- a/modules/1237/pages/image11-12.adoc
+++ b/modules/1237/pages/image11-12.adoc
@@ -1,4 +1,4 @@
-= Images 11 and 12
+= December 1800, Final Decision
 :page-role: wide
 
 In December, 1800, the Gräflich Schaumburg-Lippische vormundschaftliche Rentcammer (Comital Schaumburg-Lippe
