--- a/modules/1237/pages/image11-12.adoc
+++ b/modules/1237/pages/image11-12.adoc
@@ -68,6 +68,7 @@ und die Versicherung ertheilet, daß  
 er und seine Erben bey deren Besitz  
 jederzeit und gegen Jedermann  
 geschützet werden sollen.  
+
 Deßen zur Urkund ist dieses statt Kaufe-  
 briefs unter beÿ gedruckten Gräfl.  
 vormundschaftln Cam̅ersiegel und  
@@ -95,51 +96,28 @@ of his garden.
 
 Dispatched by Beÿer
 
-After, upon request by the colonist
-Jobst Heinrich Krückeberg No. 10
-in Berenbusch, district of Bückeburg,
-permission was granted by the
-Comital Guardianship Treasury Office
-that, for the enlargement of his garden
-and courtyard area, two plots situated
-on the village street
-be assigned to him and
-transferred to him by purchase
-in such a way that he
-shall pay 24 Mariengroschen
-per square rod; and thereafter these parcels
-were measured by a sworn land surveyor, namely:
-the first for the enlargement of his
-garden at 19 rods, 44 feet, decimal,
-and the second for the courtyard area
-at 1 rod, 90 feet, decimal, large—
-and the purchase price, according to the
-set rate, was paid in the amount of
-14 Reichsthaler, 8 Groschen, 1 Pfennig
-to the Comital Treasury;
-whereupon the aforementioned
-colonist Krückeberg is obliged
-to pay the assigned land tax and
-contributions on these two parcels,
-as well as ordinary
-and extraordinary levies
-to assume them and to enter them
-accurately at the proper time
-into the accounts of the Office of Bückeburg;
-Thus, the ownership of these parcels
-purchased by him is hereby transferred
-to the colonist Jobst Heinrich Krückeberg
-No. 10 in Berenbusch and his heirs,
-and the assurance is given
-that he and his heirs shall at all times
-and against all persons
-be protected in their possession.
+After, upon request by the colonist Jobst Heinrich Krückeberg No. 10 in
+Berenbusch, district of Bückeburg, permission was granted by the Comital
+Guardianship Treasury Office that, for the enlargement of his garden and
+courtyard area, two plots situated on the village street be assigned to him and
+transferred to him by purchase in such a way that he shall pay 24
+Mariengroschen per square rod; and thereafter these parcels were measured by a
+sworn land surveyor, namely: the first for the enlargement of his garden at 19
+rods, 44 feet, decimal, and the second for the courtyard area at 1 rod, 90
+feet, decimal, large— and the purchase price, according to the set rate, was
+paid in the amount of 14 Reichsthaler, 8 Groschen, 1 Pfennig to the Comital
+Treasury; whereupon the aforementioned colonist Krückeberg is obliged to pay
+the assigned land tax and contributions on these two parcels, as well as
+ordinary and extraordinary levies to assume them and to enter them accurately
+at the proper time into the accounts of the Office of Bückeburg; Thus, the
+ownership of these parcels purchased by him is hereby transferred to the
+colonist Jobst Heinrich Krückeberg No. 10 in Berenbusch and his heirs, and the
+assurance is given that he and his heirs shall at all times and against all
+persons be protected in their possession.
 
-As proof of this, this document
-in place of a formal deed of sale
-has been issued under the
-impressed comital guardianship
-treasury seal and customary signature.
+As proof of this, this document in place of a formal deed of sale has been
+issued under the impressed comital guardianship treasury seal and customary
+signature.
 So issued
 Bückeburg, December 1800.
 
