--- a/modules/1237/pages/image2-bottom-text.adoc
+++ b/modules/1237/pages/image2-bottom-text.adoc
@@ -1,14 +1,17 @@
-= Written Requst
+= Written Reqeust
 :page-role: wide
 
-This text, written in a smaller hand, appears underneath the text of the proceedings. Based on its content and style, it is
-almost certainly written by Herr Krückeberg himself (or dictated by him and written in his name). Notice these expressions:
+This text, written in a smaller hand, appears underneath the text of the
+forestry report. Based on its content and style, it is almost certainly written
+by Herr Krückeberg himself (or dictated by him and written in his name). Notice
+these expressions:
 
 * “Nahe an *meinem* Garten …” (Close to my garden)
 * “… so wünschte *ich* dieselbe gern urbar zu machen …” (I would like to bring it under cultivation)
 * “… an *mich* zu bringen.” (to acquire it for myself)
 
-Thus, this is clearly a first-person petition rather than administrative note by the Amt (office or bureau).
+Thus, this is clearly a first-person petition rather than administrative note
+by the Amt (office, department, bureau).
 
 image::002-1-bottom-small-text-2.png[link=self]
 
