--- a/modules/1237/pages/image2-bottom-text.adoc
+++ b/modules/1237/pages/image2-bottom-text.adoc
@@ -10,7 +10,7 @@ himself (or dictated by him and written in his name). Notice these expressions:
 * “… an *mich* zu bringen.” (to acquire it for myself)
 
 Thus, this is clearly a first-person petition rather than administrative note
-by the Amt (office, department, bureau).
+by the Amt (office, department).
 
 image::002-1-bottom-small-text-2.png[link=self]
 
