--- a/modules/1237/pages/image2-bottom-text.adoc
+++ b/modules/1237/pages/image2-bottom-text.adoc
@@ -14,6 +14,8 @@ by the Amt (office, department).
 
 image::002-1-bottom-small-text-2.png[link=self]
 
+== Transliteration
+
 [verse]
 ____
 Nahe an meinen Garten bragt auf der Gemein-
@@ -32,6 +34,8 @@ Ewr. Hochgräflichen Gnaden footnote:[Abbreviation of *Eurer Hochgräflichen Gna
 ergehet daher meine
 Bitte.
 ____
+
+== Translation
 
 [verse]
 ____
