--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -6,7 +6,9 @@
 ** xref:image2-proceedings.adoc[]
 ** xref:image2-honorifics.adoc[]
 ** xref:image2-bottom-text.adoc[]
-* xref:image3-main-text.adoc[]
+* TODO:Add Overview of Image 3 Content
+** xref:image3-main-text.adoc[]
+** TODO: Add image of left margin legt
 ** xref:image3-opposite-pg-main-text.adoc[]
 ** xref:image3-left-bot.adoc[]
 * xref:image11-12.adoc[]
