--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -8,7 +8,7 @@
 ** xref:image2-bottom-text.adoc[]
 * TODO:Add Overview of Image 3 Content
 ** xref:image3-main-text.adoc[]
-** TODO: Add image of left margin legt
+** TODO: Add left margin text
 ** xref:image3-opposite-pg-main-text.adoc[]
 ** xref:image3-left-bot.adoc[]
 * xref:image11-12.adoc[]
