--- a/modules/1237/pages/image3-main-text.adoc
+++ b/modules/1237/pages/image3-main-text.adoc
@@ -89,41 +89,24 @@ authority (like the Vormundschaftliche Kammer) for decision or approval.
 
 [role="section-narrow"]
 == Translation
-
 [verse]
 ____
-March 6, 1799  
-Chamber No. 53.  
-2 1.  
-Forestry Matters  
+Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799
 
-To  
-the Guardianship Chamber  
+Chamber No. 53
 
-Report  
-from the Offices of Bückeburg and  
-Ahnsen.  
+Land Assignment
 
-Subject:  
-Land Assignment  
+Enclosed we remit the petition of the smallholder Jobst Heinrich Krückeberg,
+No. 10 in Berenbusch, with the note that among the residents of the villages of
+Berenbusch, Nordholz, and Evesen, only the well-to-do Köter (smallholder with a
+house but little or no land) Weiland in Berenbusch has expressed
+dissatisfaction with the proposed assignment.
 
-Enclosed we remit the petition of the smallholder Jobst  
-Henrich Krückeberg No. 10 of Berenbusch,  
-with the note that among the residents of the villages  
-Berenbusch, Nordholz, and Evesen,  
-only the well-to-do Köter named Weiland in Berenbusch  
-has expressed dissatisfaction with the proposed  
-assignment,  
-partly because he himself wishes to obtain  
-this plot,  
-and partly because he claims that  
-his access route for bringing in his crops  
-would be too restricted.  
+On the one hand, he himself wishes to obtain this plot, and on the other, he
+claims that the access route for bringing in his harvest would be too
+restricted.
 
-We will assess this more closely during  
-the survey, and  
-ensure that no legitimate  
-complaint arises regarding  
-his access.
+We will assess this more closely during the surveying and ensure that no valid
+complaint arises concerning his access.
 ____
-
