--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -9,6 +9,6 @@
 * TODO:Add Overview of Image 3 Content
 ** xref:image3-main-text.adoc[]
 ** TODO: Add left margin text
-** xref:image3-opposite-pg-main-text.adoc[]
+** xref:image3-left-page-text.adoc[]
 ** xref:image3-left-bot.adoc[]
 * xref:image11-12.adoc[]
