--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -1,13 +1,29 @@
-The "main text", the larger text on the page, is the report from the Amt in Bückeburg and Arensburg, describing:
+= Land Assignment Report and Reaction, 1799
+:page-role: wide
+
+image::003.png[link=sefl]
+
+[reol="section-narrow"]
+== Overview
+
+The "main text", the larger text on the page, is the *The Land Assignment Report* issued by the *Ämter Bückeburg
+und Arensburg* (local adminstrative offices of Bückeburg and Arenburg). They are reporting to the *Gräflich
+vormundschaftliche Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority
+for land and estate matters. 
+
+The report describes:
 
 * The request from Jobst Heinrich Krückeberg.
-* A local dispute from a *Köter* named Weiland.
+* A local dispute from a *Köter* (See below) named Weiland.
 * An assurance that the issue will be examined during land measurement.
 
+.Köter Explained
+****
 *Köter* was term used historically in rural northern Germany to describe a small-scale peasant or cottager (in German:
 *Kätner* or *Kothsasse*), typically someone who owned a small house (*Kate*) with a modest plot of land but was not a
 full farmer (*Vollbauer*). Köter were usually lower in the village social hierarchy and often worked as day laborers or
 craftsmen in addition to small-scale agriculture. The term does **not** indicate a given name.
+****
 
 The *marginal note*, the text on the left, is a response to the remitted report, but not a formal reply addressed to
 Krückeberg. It is an internal instruction, filed with the main document for reference and action.
