--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -7,8 +7,8 @@
 ** xref:image2-honorifics.adoc[]
 ** xref:image2-bottom-text.adoc[]
 * TODO:Add Overview of Image 3 Content
-** xref:image3-main-text.adoc[]
-** TODO: Add left margin text
+** xref:image3-land-assignment-report.adoc[]
+** xref:image3-reponse.adoc[] 
 ** xref:image3-left-page-text.adoc[]
 ** xref:image3-left-bot.adoc[]
 * xref:image11-12.adoc[]
