--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -8,7 +8,7 @@
 ** xref:image2-bottom-text.adoc[]
 * TODO:Add Overview of Image 3 Content
 ** xref:image3-land-assignment-report.adoc[]
-** xref:image3-reponse.adoc[] 
+** xref:image3-response.adoc[] 
 ** xref:image3-left-page-text.adoc[]
 ** xref:image3-left-bot.adoc[]
 * xref:image11-12.adoc[]
