--- a/modules/1237/pages/image3-response.adoc
+++ b/modules/1237/pages/image3-response.adoc
@@ -1,17 +1,20 @@
-
-The "main text", the larger text on the page, is the report from the Amt in Bückeburg and Arensburg, describing:
-
-* The request from Jobst Heinrich Krückeberg.
-* A local dispute from a Köter named Weiland.
-* An assurance that the issue will be examined during land measurement.
-
-The *marginal note*, the text on the left, is a response to the remitted report, but not a formal reply addressed to
-Krückeberg. It is an internal instruction, filed with the main document for reference and action.
-It is a reaction from the higher office (the Kammer), giving administrative directives:
+=  Response to Land Assignment Report
+ 
+This *marginal note* is a response to the xref:image3-land-assignment-report[remitted report], but
+not a formal reply addressed to Krückeberg. It is an internal instruction, filed with the main
+document for reference and action. It is a reaction from the higher office (the Kammer), giving
+administrative directives:
 
 * Approving the allocation of the parcel (so Krückeberg’s request is likely approved).
 
 * Instructing the local officials to investigate other possibly unauthorized garden expansions in Berenbusch and to report back.
+
+It was written in the left margin the Land Assignment Report and encroaches on the text of the Land
+Assigment Report.
+
+image::003-right-page-left-margin-text.png[link=self]
+
+== Transliteration
 
 [verse]
 ____
