--- a/modules/1237/pages/image3-response.adoc
+++ b/modules/1237/pages/image3-response.adoc
@@ -1,7 +1,7 @@
 =  Response to Land Assignment Report
 :page-role: wide
  
-This *marginal note* is a response to the xref:image3-land-assignment-report[remitted report], but
+This *marginal note* is a response to the remitted xref:image3-land-assignment-report[Land Assignment Report], but
 not a formal reply addressed to Krückeberg. It is an internal instruction, filed with the main
 document for reference and action. It is a reaction from the higher office (the Kammer), giving
 administrative directives:
