--- a/modules/1237/pages/image3-land-assignment-report.adoc
+++ b/modules/1237/pages/image3-land-assignment-report.adoc
@@ -1,7 +1,19 @@
 = Land Assignment Report for Jobst Heinrich Krückeberg, March 6, 1799
 :page-role: wide
 
-This is the Land Assigment Report issued by the
+This is the Land Assigment Report issued by the issued by the *Ämter Bückeburg und Arensburg* (local
+adminstrative offices of Bückeburg and Arenburg). They are reporting to the *Gräflich vormundschaftliche
+Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority for
+land and estate matters. 
+
+The xref:image3-reponse.adoc[response] to their report was also written on the left side of this report;
+however, in this image, it has been erase to improve the readability of the report. 
+
+The report describes:
+
+* The request from Jobst Heinrich Krückeberg.
+* A local dispute from a *Köter* (See below) named Weiland.
+* An assurance that the issue will be examined during land measurement 
 
 image::003-right-page-main-text.png[link=self]
 
