--- a/modules/1237/pages/image3-land-assignment-report.adoc
+++ b/modules/1237/pages/image3-land-assignment-report.adoc
@@ -6,7 +6,7 @@ adminstrative offices of Bückeburg and Arenburg). They are reporting to the *Gr
 Cammer* (Countly Guardianship Chamber), which was the higher fiscal and administrative authority for
 land and estate matters. 
 
-The xref:image3-reponse.adoc[response] to their report was also written on the left side of this report;
+The xref:image3-response.adoc[response] to their report was also written on the left side of this report;
 however, in this image, it has been erase to improve the readability of the report. 
 
 The report describes:
