--- a/modules/1237/pages/image3-report-and-response.adoc
+++ b/modules/1237/pages/image3-report-and-response.adoc
@@ -1,4 +1,4 @@
-= Land Assignment Report for Jobst Heinrich Krückeberg and Response
+= Land Assignment Report for Jobst Heinrich Krückeberg and Its Response
 :page-role: wide
 
 == Land Assignment Report
