--- a/modules/1237/pages/image3-petition.adoc
+++ b/modules/1237/pages/image3-petition.adoc
@@ -1,6 +1,8 @@
 = Petition of Jobst Heinrich Krückeberg
 :page-role: wide
 
+== Petition
+
 The petition of Jobst Heinrich Krückeberg appears on the left page of image 3. The petition was accompanied by a
 Land Assignment Report. It requests:
 
