--- a/modules/1237/pages/image3-report-and-response.adoc
+++ b/modules/1237/pages/image3-report-and-response.adoc
@@ -63,6 +63,7 @@ dieses näher beurtheilen und
 dahin seyn, daß ihm wegen der  
 Einfahrt keine gegründete Be-  
 schwerde
+TODO: Continued on Image 4 <--------
 ____
 
 [role="section-narrow"]
@@ -130,6 +131,8 @@ restricted.
 
 We will assess this more closely during the surveying and ensure that no valid
 complaint arises concerning his access.
+
+TODO: Continued on Image 4 <--------
 ____
 
 == Official Response to Petition and Land Assignment Report
