--- a/modules/1237/pages/image3-overview.adoc
+++ b/modules/1237/pages/image3-overview.adoc
@@ -13,9 +13,24 @@ for land and estate matters.
 
 The report describes:
 
-* The request from Jobst Heinrich Krückeberg.
-* A local dispute from a *Köter* (See below) named Weiland.
-* An assurance that the issue will be examined during land measurement.
+* The request from *Jobst Heinrich Krückeberg*, a _Brinksitzer_ (smallholder) residing at No. 10 in Berenbusch, to obtain a piece of land to enlarge his garden and farmyard.
+
+* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights; see glossary)
+named *Weiland*, also from Berenbusch, who:
+** Expressed dissatisfaction with the planned assignment.
+** Claimed he himself wanted to acquire the same plot.
+** Argued the land reassignment would restrict his access for transporting crops.
+
+* An assurance from the local authorities (the Ämter Bückeburg and Arensburg) that this access issue would be
+examined more closely during the land survey (_Ausmeßung_), but initial assessment suggested the objection had no
+valid basis.
+
+* _Additional finding_: The actual cause of Weiland’s objection seemed to be that he had *illegally planted willow
+trees* (_Weiden Bäumen_) on the plot in question—i.e. he had already started using it without authorization.
+
+* Final judgment: Since the planting had been done *without permission* (_eigenmächtiger Weise_), this act did not
+constitute a legal claim to the land, and there were *no legitimate grounds* to deny Krückeberg’s requested
+assignment.
 
 .Köter Explained
 ****
