--- a/modules/1237/pages/image3-4-report-and-response.adoc
+++ b/modules/1237/pages/image3-4-report-and-response.adoc
@@ -16,16 +16,22 @@ follows late below.
 
 * The request from *Jobst Heinrich Krückeberg*, a _Brinksitzer_ (smallholder) residing at No. 10 in Berenbusch, to obtain a piece of land to enlarge his garden and farmyard.
 
-* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights; see glossary) named *Weiland*, also from Berenbusch, who:
+* A local objection raised by a *Köter* (an older term for a small cottager with minimal land rights; see glossary)
+named *Weiland*, also from Berenbusch, who:
 ** Expressed dissatisfaction with the planned assignment.
 ** Claimed he himself wanted to acquire the same plot.
 ** Argued the land reassignment would restrict his access for transporting crops.
 
-* An assurance from the local authorities (the Ämter Bückeburg and Arensburg) that this access issue would be examined more closely during the land survey (_Ausmeßung_), but initial assessment suggested the objection had no valid basis.
+* An assurance from the local authorities (the Ämter Bückeburg and Arensburg) that this access issue would be
+examined more closely during the land survey (_Ausmeßung_), but initial assessment suggested the objection had no
+valid basis.
 
-* _Additional finding_: The actual cause of Weiland’s objection seemed to be that he had *illegally planted willow trees* (_Weiden Bäumen_) on the plot in question—i.e. he had already started using it without authorization.
+* _Additional finding_: The actual cause of Weiland’s objection seemed to be that he had *illegally planted willow
+trees* (_Weiden Bäumen_) on the plot in question—i.e. he had already started using it without authorization.
 
-* Final judgment: Since the planting had been done *without permission* (_eigenmächtiger Weise_), this act did not constitute a legal claim to the land, and there were *no legitimate grounds* to deny Krückeberg’s requested assignment.
+* Final judgment: Since the planting had been done *without permission* (_eigenmächtiger Weise_), this act did not
+constitute a legal claim to the land, and there were *no legitimate grounds* to deny Krückeberg’s requested
+assignment.
 
 image::003-right-page-main-text.png[link=self]
 
